package com.the9.common.proto;
import "common.proto";
message LoginGame_C2S_Msg{
}
message LoginGame_S2C_Msg{
	required UserDTO userDTO=1;
}
message LoginOut_C2S_Msg{
	required int32 userId=1;
}
message MaintainNotice_S2C_Msg{
	required string content=1;
}
message KeepAlive_C2S_Msg{

}
message KeepAlive_S2C_Msg{

}